--- a/themes/big/layouts/partials/ads-histats.html
+++ b/themes/big/layouts/partials/ads-histats.html
@@ -12,8 +12,8 @@ return arr[Math.floor(arr.length * Math.random())];
  }
 
 var direct_link_ads = rChoice([
-"https://stretchedcreepy.com/fu2rtefk1?key=876ca8cd63b976782c7c26fd0e12773b",
- "https://stretchedcreepy.com/bamkwx3h?key=103e71d5d001d994c6f6214a92827f77",
+"https://shp.ee/6yghug7",
+"https://shp.ee/sa4skbf",
 ]);
 
 
@@ -37,6 +37,7 @@ var ars             = rChoice([                            "#YOUR_ARSAE_SERVER_O
 
    <script  src="https://cdn.jsdelivr.net/gh/vyantagc/vyantagc/popme-double-ads4.js" ></script>
 
+   <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
 _Hasync.push(['Histats.start', '1,4554576,4,0,0,0,00010000']);
 _Hasync.push(['Histats.fasi', '1']);
@@ -46,4 +47,5 @@ var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async
 hs.src = ('//s10.histats.com/js15_as.js');
 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
 })();</script>
-<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4554576&101" alt="unique visitor counter" border="0"></a></noscript>
+<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4554576&101" alt="" border="0"></a></noscript>
+<!-- Histats.com  END  -->
